/*
 * Copyright 2017 XLAB d.o.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package proto;

import "messages.proto";
import "google/protobuf/empty.proto";

service PseudonymSystemCA {
	rpc GenerateCertificate(stream Message) returns (stream Message) {}
	rpc GenerateCertificate_EC(stream Message) returns (stream Message) {}
}

service PseudonymSystem {
	rpc GenerateNym (stream Message) returns (stream Message) {}
	rpc GenerateNym_EC (stream Message) returns (stream Message) {}
	rpc ObtainCredential (stream Message) returns (stream Message) {}
	rpc ObtainCredential_EC (stream Message) returns (stream Message) {}
	rpc TransferCredential (stream Message) returns (stream Message) {}
	rpc TransferCredential_EC (stream Message) returns (stream Message) {}
}

service CL {
	rpc GetCredentialIssueNonce (stream Message) returns (stream Message) {}
	rpc IssueCredential (stream Message) returns (stream Message) {}
}

service Info {
	rpc GetServiceInfo(google.protobuf.Empty) returns (ServiceInfo) {}
}
